--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <a href="https://wa.me/<7795402865>
 "><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images/Rohan_BCA.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
